@@ -31,6 +31,7 @@ ALTER TABLE `#####contactform` ADD `contacttext` TEXT NOT NULL ;
 ALTER TABLE `#####newsmanager` ADD `news_text` TEXT NOT NULL ;
 ALTER TABLE `#####newsmanager` ADD `readmore_link` INT( 1 ) NOT NULL DEFAULT '0';
 ALTER TABLE `#####newsmanager` ADD `news_spacing` INT( 2 ) NOT NULL DEFAULT '0';
+
 ALTER TABLE `#####sidemenu` ADD `target` VARCHAR( 20 ) NULL DEFAULT '';
 ALTER TABLE `#####topmenu` ADD `target` VARCHAR( 20 ) NULL DEFAULT '';
 
