@@ -8,9 +8,9 @@
 	<status>RC1</status>
 	<status>Beta</status>
 	
-	<build>Build 2400</build>
+	<build>Build 2410</build>
 	<name>toendaCMS</name>
 	<tagline>Your ideas ahead</tagline>
-	<release_date>15.01.2007 - 01:24</release_date>
+	<release_date>15.01.2007 - 22:55</release_date>
 	<toenda_copyright>2003 - 2007</toenda_copyright>
 </version>
